# qwen-jax

./: LICENSE  README.md  main.ipynb  pyproject.toml
examples/: dataset.txt  generate.ipynb  train.ipynb
qwen/: __init__.py  model.py  utils.py
