[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "qwen-jax"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jax==0.4.38",
    "equinox==0.11.11"
]

[project.optional-dependencies]
tests = [
    "torch==2.6.0",
    "transformers==4.48.3"
]

[tool.setuptools.packages.find]
include = ["qwen"]